feat: update CV

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <h1>Développeuse <span class="auto-typing"></span></h1>
         <p>
             Bonjour, je suis Noëlla MAILHOL, je suis passionnée du développpement d'application web <br>
-            et mobile. Suite à l'obtention de mon titre Concepteur Développeur d'Application (CDA) <br>
+            et mobile. Suite à l'obtention de mon titre <strong>Concepteur Développeur d'Application (CDA)</strong> <br>
             j'ai décidé de poursuivre en MBA Développement FullStack à MyDigitalSchool de Lille cette année. <br>
-            Mon parcours académique en informatique a été une occasion d'acquérir les compétences nécessaires <br>
-            pour mener à bien un projet quelconque. <br>
+            Mon parcours académique et mes expériences en entreprise à <strong>Ichtus IT</strong> ont été une <br>
+            occasion d'acquérir les compétences nécessaires pour mener à bien un projet quelconque. <br>
             Mon choix de carrière s'est naturellement orienté vers le développement <br>
             web, un domaine qui m'inspire particulièrement. <br>
 
