feat: update portfolio

--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
     <section class="title"  id="home">
         <h1>Développeuse <span class="auto-typing"></span></h1>
         <p>
-            Bonjour, je suis Noëlla MAILHOL, je suis passionnée du développpement d'application web <br>
+            Bonjour, je suis <strong>Noëlla MAILHOL</strong>, je suis passionnée du développpement d'application web <br>
             et mobile. Suite à l'obtention de mon titre <strong>Concepteur Développeur d'Application (CDA)</strong> <br>
             j'ai décidé de poursuivre en MBA Développement FullStack à MyDigitalSchool de Lille cette année. <br>
-            Mon parcours académique et mes expériences en entreprise à <strong>Ichtus IT</strong> ont été une <br>
-            occasion d'acquérir les compétences nécessaires pour mener à bien un projet quelconque. <br>
-            Mon choix de carrière s'est naturellement orienté vers le développement <br>
-            web, un domaine qui m'inspire particulièrement. <br>
+            Mon parcours académique et mes expériences en entreprise ont été une occasion d'acquérir les <br>
+            compétences nécessaires pour mener à bien un projet quelconque. <br><br>
 
             💡 <strong>Je suis ouverte à toute opportunité autour du développement !</strong> 🚀 <br>
         </p>
@@ -129,6 +127,55 @@
                 <img src="img/logo-c.png" alt="c">
                 <h3>C</h3>
             </div>
+            <div class="logo">
+                <img src="img/sveltkit.png" alt="sveltekit">
+                <h3>SvelteKit</h3>
+            </div>
+            <div class="logo">
+                <img src="img/typescript.png" alt="Typescript">
+                <h3>Typescript</h3>
+            </div>
+            <div class="logo">
+                <img src="img/tailwind.png" alt="tailwind CSS">
+                <h3>Tailwind CSS</h3>
+            </div>
+            <div class="logo">
+                <img src="img/github.png" alt="Github">
+                <h3>Github</h3>
+            </div>
+            <div class="logo">
+                <img src="img/ci-cd.png" alt="GitHub Actions CI/CD">
+                <h3>GitHub Actions</h3>
+                <h3>CI/CD</h3>
+            </div>
+            <div class="logo">
+                <img src="img/figma.png" alt="Figma">
+                <h3>Figma</h3>
+            </div>
+            <div class="logo">
+                <img src="img/trello.png" alt="Trello">
+                <h3>Trello</h3>
+            </div>
+            <div class="logo">
+                <img src="img/prettier.png" alt="Prettier">
+                <h3>Prettier</h3>
+            </div>
+            <div class="logo">
+                <img src="img/eslint.png" alt="ESLint">
+                <h3>ESLint</h3>
+            </div>
+            <div class="logo">
+                <img src="img/playwright.png" alt="Playwright">
+                <h3>Playwright</h3>
+            </div>
+            <div class="logo">
+                <img src="img/jest.png" alt="Jest">
+                <h3>Jest</h3>
+            </div>
+            <div class="logo">
+                <img src="img/swagger.png" alt="Swagger">
+                <h3>Swagger</h3>
+            </div>
         </div>
     </div>
     
@@ -136,6 +183,60 @@
     <div class="mes-projets" id="projects">
         <h2>Mes réalisations</h2>
         <div class="flex1">
+            <div class="projet">
+                <a href="https://mnoella.github.io/panic-cookie/" target="_blank">
+                    <img src="img/choc-de-saveur.jpg" alt="site jeu de plateau">
+                    <h3>Panic Cookie</h3>
+                </a>
+            </div>
+            <div class="projet">
+                <a href="https://mnoella.github.io/bookshop/" target="_blank">
+                    <img src="img/bookshop.jpg" alt="BookShop - Projet Ergonomie CSS">
+                    <h3>BookShop</h3>
+                </a>
+            </div>
+            <div class="projet">
+                <a href=" https://mnoella.github.io/my-dev-journey/" target="_blank">
+                    <img src="img/blog-stage.png" alt="Blog de validation de stage">
+                    <h3>Blog de validation de stage</h3>
+                </a>
+            </div>
+            <div class="projet" onclick="openModal('svelma')">
+                <img src="img/svelma.png" alt="Svelma">
+                <h3>Svelma</h3>
+            </div>
+            <div class="projet" onclick="openModal('fmg')">
+                <img src="img/findmygem.png" alt="Find My Gem">
+                <h3>Find My Gem</h3>
+            </div>
+            <div class="projet" onclick="openModal('aquatrack')">
+                <img src="img/aquatrack.jpg" alt="AquaTrack">
+                <h3>AquaTrack</h3>
+            </div>
+            <div class="projet" onclick="openModal('travel')">
+                <img src="img/travel-app.jpeg" alt="TravelDiscover App">
+                <h3>TravelDiscover</h3>
+            </div>
+            <div class="projet" onclick="openModal('forum')">
+                <img src="img/forum-anonyme.png" alt="Forum Anonyme">
+                <h3>Forum Anonyme</h3>
+            </div>
+            <div class="projet" onclick="openModal('calculator')">
+                <img src="img/calculator.png" alt="Calculator App">
+                <h3>Calculator</h3>
+            </div>
+            <div class="projet" onclick="openModal('hcc')">
+                <img src="img/hcc.jpg" alt="Handball - API REST">
+                <h3>Handball <i><small>API REST</small></i></h3>
+            </div>
+            <div class="projet" onclick="openModal('eatzee')">
+                <img src="img/eatzee.jpeg" alt="Eatzee">
+                <h3>Eatzee <i><small>Alternance</small></i></h3>
+            </div>
+            <div class="projet" onclick="openModal('eatzee')">
+                <img src="img/teny-zaraina.png" alt="Teny Zaraina - Alternance">
+                <h3>Teny Zaraina <i><small>Alternance</small></i></h3>
+            </div>
             <div class="projet" onclick="openModal('blog')">
                 <img src="img/blog.PNG" alt="blog php">
                 <h3>Blog PHP</h3>
@@ -144,15 +245,17 @@
                 <img src="img/ai.jpg" alt="projet python">
                 <h3>Projet GPT Tkinter</h3>
             </div>
-            <div class="projet">
-                <a href="https://mnoella.github.io/un-choc-de-saveur" target="_blank">
-                    <img src="img/choc-de-saveur.jpg" alt="site jeu de plateau">
-                    <h3>Site Un Choc de Saveur</h3>
-                </a>
+            <div class="projet" onclick="openModal('flappy')">
+                <img src="img/flappy.png" alt="Flappy Bird">
+                <h3>Flappy Bird</h3>
             </div>
             <div class="projet" onclick="openModal('maze')">
                 <img src="img/maze.jpg" alt="projet csharp">
                 <h3>Maze Game C#</h3>
+            </div>
+            <div class="projet" onclick="openModal('runner')">
+                <img src="img/infinite-runner.jpeg" alt="Infinite Runner">
+                <h3>Infinite Runner</h3>
             </div>
             <!--
             <div class="projet">
