feat: enhance "Mes compétences" 's UI

--- a/index.html
+++ b/index.html
@@ -74,107 +74,136 @@
 
     <div class="skills" id="skills">
         <h2>Mes compétences</h2>
-        <div class="flex">
-            <div class="logo">
-                <img src="img/logo-html.png" alt="html">
-                <h3>HTML</h3>
+        
+        <div class="skills-container">
+            <div class="skill-category">
+                <h3 class="category-title">Langages de programmation</h3>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <img src="img/logo-html.png" alt="HTML">
+                        <span>HTML</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/logo-css.png" alt="CSS">
+                        <span>CSS</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/logo-js.png" alt="JavaScript">
+                        <span>Javascript</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/logo-php.png" alt="PHP">
+                        <span>PHP</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/logo-python.png" alt="Python">
+                        <span>Python</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/logo-csharp.png" alt="C#">
+                        <span>C#</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/logo-c.png" alt="C">
+                        <span>C</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/typescript.png" alt="TypeScript">
+                        <span>TypeScript</span>
+                    </div>
+                </div>
             </div>
-            <div class="logo">
-                <img src="img/logo-css.png" alt="css" >
-                <h3>CSS</h3>
+
+            <div class="skill-category">
+                <h3 class="category-title">Frameworks & Librairies</h3>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <img src="img/logo-react.png" alt="React">
+                        <span>React</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/nextJS.png" alt="Next.js">
+                        <span>Next.js</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/sveltkit.png" alt="SvelteKit">
+                        <span>SvelteKit</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/nestJS.png" alt="NestJS">
+                        <span>NestJS</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/tailwind.png" alt="Tailwind CSS">
+                        <span>Tailwind CSS</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/monogame.png" alt="MonoGame">
+                        <span>MonoGame</span>
+                    </div>
+                </div>
             </div>
-            <div class="logo">
-                <img src="img/logo-js.png" alt="js" >
-                <h3>Javascript</h3>
+
+            <div class="skill-category">
+                <h3 class="category-title">Base de données & ORM</h3>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <img src="img/logo-sql.png" alt="SQL">
+                        <span>SQL</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/typeorm.png" alt="TypeORM">
+                        <span>TypeORM</span>
+                    </div>
+                </div>
             </div>
-            <div class="logo">
-                <img src="img/logo-react.png" alt="react">
-                <h3>React/React Native</h3>
+
+            <div class="skill-category">
+                <h3 class="category-title">Outils & Technologies</h3>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <img src="img/github.png" alt="GitHub">
+                        <span>GitHub</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/ci-cd.png" alt="GitHub Actions">
+                        <span>CI/CD</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/figma.png" alt="Figma">
+                        <span>Figma</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/trello.png" alt="Trello">
+                        <span>Trello</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/prettier.png" alt="Prettier">
+                        <span>Prettier</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/eslint.png" alt="ESLint">
+                        <span>ESLint</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/swagger.png" alt="Swagger">
+                        <span>Swagger</span>
+                    </div>
+                </div>
             </div>
-            <div class="logo">
-                <img src="img/nestJS.png" alt="react">
-                <h3>NestJS</h3>
-            </div>
-            <div class="logo">
-                <img src="img/typeorm.png" alt="react">
-                <h3>TypeORM</h3>
-            </div>
-            <div class="logo">
-                <img src="img/nextJS.png" alt="react">
-                <h3>Next.js</h3>
-            </div>
-            <div class="logo">
-                <img src="img/logo-php.png" alt="php"  >
-                <h3>PHP</h3>
-            </div>
-            <div class="logo">
-                <img src="img/logo-python.png" alt="python">
-                <h3>Python</h3>
-            </div>
-            <div class="logo">
-                <img src="img/logo-csharp.png" alt="c#">
-                <h3>CSharp</h3>
-            </div>
-            <div class="logo">
-                <img src="img/monogame.png" alt="c#">
-                <h3>Monogame</h3>
-            </div>
-            <div class="logo">
-                <img src="img/logo-sql.png" alt="sql">
-                <h3>SQL</h3>
-            </div>
-            <div class="logo">
-                <img src="img/logo-c.png" alt="c">
-                <h3>C</h3>
-            </div>
-            <div class="logo">
-                <img src="img/sveltkit.png" alt="sveltekit">
-                <h3>SvelteKit</h3>
-            </div>
-            <div class="logo">
-                <img src="img/typescript.png" alt="Typescript">
-                <h3>Typescript</h3>
-            </div>
-            <div class="logo">
-                <img src="img/tailwind.png" alt="tailwind CSS">
-                <h3>Tailwind CSS</h3>
-            </div>
-            <div class="logo">
-                <img src="img/github.png" alt="Github">
-                <h3>Github</h3>
-            </div>
-            <div class="logo">
-                <img src="img/ci-cd.png" alt="GitHub Actions CI/CD">
-                <h3>GitHub Actions</h3>
-                <h3>CI/CD</h3>
-            </div>
-            <div class="logo">
-                <img src="img/figma.png" alt="Figma">
-                <h3>Figma</h3>
-            </div>
-            <div class="logo">
-                <img src="img/trello.png" alt="Trello">
-                <h3>Trello</h3>
-            </div>
-            <div class="logo">
-                <img src="img/prettier.png" alt="Prettier">
-                <h3>Prettier</h3>
-            </div>
-            <div class="logo">
-                <img src="img/eslint.png" alt="ESLint">
-                <h3>ESLint</h3>
-            </div>
-            <div class="logo">
-                <img src="img/playwright.png" alt="Playwright">
-                <h3>Playwright</h3>
-            </div>
-            <div class="logo">
-                <img src="img/jest.png" alt="Jest">
-                <h3>Jest</h3>
-            </div>
-            <div class="logo">
-                <img src="img/swagger.png" alt="Swagger">
-                <h3>Swagger</h3>
+
+            <div class="skill-category">
+                <h3 class="category-title">Tests & Qualité</h3>
+                <div class="skills-grid">
+                    <div class="skill-card">
+                        <img src="img/jest.png" alt="Jest">
+                        <span>Jest</span>
+                    </div>
+                    <div class="skill-card">
+                        <img src="img/playwright.png" alt="Playwright">
+                        <span>Playwright</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
