feat: Add calculator UI image

--- a/index.html
+++ b/index.html
@@ -778,6 +778,13 @@
                             <li><strong>Outils de tests :</strong> Vitest (unitaires), Playwright (e2e)</li>
                         </ul>
                     </div>
+
+                    <div class="project-section">
+                        <h3>Aperçus</h3>
+                        <div class="project-gallery">
+                            <img src="img/calculatorUI.png" alt="Interface Calculator">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- HCC Handball -->
